--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Sexiest Man Alive</title>
-	<body style="background-color:black">
+	<body style="background-color:red">
 	<font color="lightgrey">
 	<font face="helvetica">
 </head>
